extractor/tests/snapshots/test_inputs__passing__drop_module.lua-stdout.snap
---
source: extractor/tests/test-inputs.rs
expression: stdout
snapshot_kind: text
---
[
  {
    "functions": [],
    "properties": [],
    "types": [],
    "name": "hi",
    "desc": "",
    "source": {
      "line": 3,
      "path": ""
    }
  }
]
