extractor/tests/snapshots/test_inputs__passing__everything_sandwich.lua-stdout.snap
---
source: extractor/tests/test-inputs.rs
expression: stdout
snapshot_kind: text
---
[
  {
    "functions": [
      {
        "name": "new",
        "desc": "Creates a new instance of Module.",
        "params": [
          {
            "name": "name",
            "desc": "This is the name for this Module.",
            "lua_type": "string"
          }
        ],
        "returns": [
          {
            "desc": "Returns the new Module!",
            "lua_type": "Module"
          }
        ],
        "function_type": "static",
        "tags": [
          "this is a tag",
          "this is another tag"
        ],
        "errors": [
          {
            "lua_type": "\"Bad\"",
            "desc": "This can error with the text Bad if there's a bad error."
          },
          {
            "lua_type": "Error<F>",
            "desc": "THis can error with an ERror object also. Maybe. We don't really know"
          }
        ],
        "realm": [
          "Client",
          "Server"
        ],
        "deprecated": {
          "version": "1.12",
          "desc": "Use [[Module.somethingElse]] instead"
        },
        "source": {
          "line": 63,
          "path": ""
        }
      },
      {
        "name": "get",
        "desc": "Gets a thingy",
        "params": [
          {
            "name": "name",
            "desc": "This is the name for this Module",
            "lua_type": "string"
          }
        ],
        "returns": [
          {
            "desc": "",
            "lua_type": "Module - Returns the new Module!"
          }
        ],
        "function_type": "method",
        "source": {
          "line": 74,
          "path": ""
        }
      }
    ],
    "properties": [],
    "types": [],
    "name": "Module",
    "desc": "This is a module lcass with thsf",
    "source": {
      "line": 49,
      "path": ""
    }
  },
  {
    "functions": [
      {
        "name": "TheFunction",
        "desc": "Does the stuff",
        "params": [
          {
            "name": "thename",
            "desc": "the description",
            "lua_type": "the type"
          },
          {
            "name": "thenameredux",
            "desc": "the description again",
            "lua_type": "the type but twice"
          }
        ],
        "returns": [],
        "function_type": "static",
        "source": {
          "line": 43,
          "path": ""
        }
      }
    ],
    "properties": [],
    "types": [],
    "name": "theclass",
    "desc": "This is the class",
    "unreleased": true,
    "source": {
      "line": 32,
      "path": ""
    }
  }
]
