extractor/tests/snapshots/test_inputs__passing__free_function.lua-stdout.snap
---
source: extractor/tests/test-inputs.rs
expression: stdout
snapshot_kind: text
---
[
  {
    "functions": [
      {
        "name": "example",
        "desc": "a function",
        "params": [],
        "returns": [],
        "function_type": "static",
        "source": {
          "line": 8,
          "path": ""
        }
      },
      {
        "name": "aMethod",
        "desc": "a method",
        "params": [],
        "returns": [],
        "function_type": "method",
        "source": {
          "line": 16,
          "path": ""
        }
      }
    ],
    "properties": [],
    "types": [],
    "name": "free",
    "desc": "",
    "source": {
      "line": 2,
      "path": ""
    }
  }
]
