extractor/tests/snapshots/test_inputs__passing__if_then_expression.lua-stdout.snap
---
source: extractor/tests/test-inputs.rs
expression: stdout
snapshot_kind: text
---
[
  {
    "functions": [],
    "properties": [],
    "types": [],
    "name": "free",
    "desc": "",
    "source": {
      "line": 2,
      "path": ""
    }
  }
]
